# playwright.config.js
@@ -16,6 +16,7 @@ export default defineConfig({
         "**/getVatReturn.behaviour.test.js",
         "**/postVatReturnFraudPreventionHeaders.behaviour.test.js",
         "**/getVatObligations.behaviour.test.js",
+        "**/getVatLiabilities.behaviour.test.js",
         "**/passRedemption.behaviour.test.js",
         "**/tokenEnforcement.behaviour.test.js",
       ],
@@ -59,6 +60,14 @@ export default defineConfig({
       name: "getVatObligationsBehaviour",
       testDir: "behaviour-tests",
       testMatch: ["**/getVatObligations.behaviour.test.js"],
+      workers: 1,
+      outputDir: "./target/behaviour-test-results/",
+      timeout: 300_000,
+    },
+    {
+      name: "getVatLiabilitiesBehaviour",
+      testDir: "behaviour-tests",
+      testMatch: ["**/getVatLiabilities.behaviour.test.js"],
       workers: 1,
       outputDir: "./target/behaviour-test-results/",
       timeout: 300_000,
